--- a/app/backend/bff-service/build.gradle
+++ b/app/backend/bff-service/build.gradle
@@ -1,56 +1,87 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.13'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'br.gasmartins.leads'
-version = '0.0.1-SNAPSHOT'
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'java-library'
+	apply plugin: 'io.spring.dependency-management'
+	apply plugin: 'jacoco'
+	apply from: "${rootDir}/repositories.gradle"
 
-java {
-	sourceCompatibility = '11'
-}
+	group = 'br.pucminas.bff'
+	version = '0.0.1-SNAPSHOT'
 
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
+	java {
+		sourceCompatibility = '11'
 	}
-}
 
-repositories {
-	mavenCentral()
-}
-
-ext {
-	set('springCloudVersion', "2021.0.7")
-}
-
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-cache'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-}
-
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	configurations {
+		compileOnly {
+			extendsFrom annotationProcessor
+		}
 	}
+
+	ext {
+		set('springBootVersion', "2.7.13")
+		set('springCloudVersion', "2021.0.7")
+		set('logstashVersion', "7.4")
+		set('assertJVersion', "3.24.2")
+		set('mockitoVersion', "5.4.0")
+		set('testcontainersVersion', "1.17.3")
+	}
+
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter'
+		implementation 'org.springframework.boot:spring-boot-starter-actuator'
+		implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
+		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+		implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+		compileOnly 'org.projectlombok:lombok'
+		testCompileOnly 'org.projectlombok:lombok'
+		runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+
+		annotationProcessor 'org.projectlombok:lombok'
+		testAnnotationProcessor 'org.projectlombok:lombok'
+
+		implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: logstashVersion
+
+		implementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'io.projectreactor:reactor-test'
+		testImplementation group: 'org.assertj', name: 'assertj-core', version: assertJVersion
+		testImplementation group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
+		testImplementation 'org.testcontainers:junit-jupiter'
+	}
+
+	dependencyManagement {
+		imports {
+			mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+			mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+			mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+		}
+	}
+
+	test {
+		useJUnitPlatform()
+		finalizedBy(jacocoTestReport)
+	}
+
+	jacoco {
+		toolVersion = '0.8.7'
+	}
+
+	/*jacocoTestReport {
+		reports {
+			html.enabled = true
+			xml.enabled = true
+			csv.enabled = false
+			html.destination file("${buildDir}/jacocoHtml")
+		}
+	}*/
+
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+
