--- a/app/backend/bff-service/configuration/build.gradle
+++ b/app/backend/bff-service/configuration/build.gradle
@@ -5,13 +5,12 @@ plugins {
 dependencies {
     implementation project(':common')
     implementation project(':application')
-    implementation project(':adapters:persistence')
     implementation project(':adapters:web')
+    implementation project(':adapters:messaging')
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     testImplementation project(':application').sourceSets.test.output
-    testImplementation project(':adapters:persistence').sourceSets.test.output
+    testImplementation project(':adapters:messaging').sourceSets.test.output
     testImplementation project(':adapters:web').sourceSets.test.output
 }
-
