--- a/app/backend/bff-service/adapters/web/build.gradle
+++ b/app/backend/bff-service/adapters/web/build.gradle
@@ -5,6 +5,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    implementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
+
     api project(':common')
     implementation project(':application')
 
