--- a/app/backend/product-service/configuration/src/main/resources/application.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: false
-    show-sql: false
+    show-sql: true
     hibernate:
       ddl-auto: none
 
