--- a/app/backend/bff-service/adapters/messaging/build.gradle
+++ b/app/backend/bff-service/adapters/messaging/build.gradle
@@ -1,19 +1,4 @@
-plugins {
-    id 'java'
-}
-
-group = 'br.gasmartins.leads'
-version = '0.0.1-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
+    //implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 }
