--- a/app/backend/quote-service/configuration/src/main/resources/application-dev.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-dev.yml
@@ -1,3 +1,10 @@
+spring:
+  data:
+    mongodb:
+      uri: mongodb://root:mongodb@localhost:27017/quotes?authSource=admin
+      username: root
+      password: mongodb
+
 eureka:
   client:
     enabled: false
