--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     volumes:
-      - ./script/:/docker-entrypoint-initdb.d/
+      - ./scripts/:/docker-entrypoint-initdb.d/
     ports:
       - "5432:5432"
 
@@ -38,6 +38,15 @@ services:
     ports:
       - 8001:8001    
 
+  mongodb:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: mongodb
+      MONGO_INITDB_DATABASE: quotes
+    ports:
+      - "27017:27017"
+      
   jaeger-server:
     image: jaegertracing/all-in-one:1.18.1
     container_name: jaeger-server
