--- a/app/backend/bff-service/configuration/src/main/resources/application.yml
+++ b/app/backend/bff-service/configuration/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     name: bff-service
   main:
     allow-bean-definition-overriding: true
+  redis:
+    client-name: ${spring.application.name}
+    client-type: LETTUCE
   sleuth:
     enabled: true
     trace-id128: true
