--- a/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/lead-service/configuration/src/main/resources/application-prod.yml
@@ -1,3 +1,13 @@
+spring:
+  redis:
+    password: redis
+    port: 6379
+    host: localhost
+    ssl: false
+    jedis:
+      pool:
+        enabled: true
+
 eureka:
   client:
     enabled: true
