--- a/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-prod.yml
@@ -1,3 +1,10 @@
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/quotes
+      username: root
+      password: mongodb
+
 eureka:
   client:
     enabled: true
