Fix mongodb authentication

--- a/app/backend/quote-service/configuration/src/main/resources/application-dev.yml
+++ b/app/backend/quote-service/configuration/src/main/resources/application-dev.yml
@@ -1,7 +1,9 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://root:mongodb@localhost:27017/quotes?authSource=admin
+      host: localhost
+      port: 27017
+      database: quotes
       username: root
       password: mongodb
 
