Refactor Redis Stream Consumer

--- a/app/backend/lead-service/adapters/messaging/src/test/resources/application-test.yaml
+++ b/app/backend/lead-service/adapters/messaging/src/test/resources/application-test.yaml
@@ -18,3 +18,8 @@ redis:
   streams:
     key: leads
     group: ${spring.application.name}
+
+eureka:
+  client:
+    enabled: false
+    register-with-eureka: false
