--- a/app/backend/lead-service/settings.gradle
+++ b/app/backend/lead-service/settings.gradle
@@ -2,12 +2,14 @@ rootProject.name = 'lead-service'
 
 include ':common'
 include ':application'
+include ':adapters:persistence'
 include ':adapters:messaging'
 include ':adapters:streams'
 include ':configuration'
 
 findProject(':common')?.name = 'common'
 findProject(':application')?.name = 'application'
+findProject(':adapters:persistence')?.name = 'persistence'
 findProject(':adapters:messaging')?.name = 'messaging'
 findProject(':adapters:streams')?.name = 'streams'
 findProject(':configuration')?.name = 'configuration'
