--- a/app/backend/lead-service/settings.gradle
+++ b/app/backend/lead-service/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'lead-service'
 
 include ':common'
 include ':application'
+include ':adapters:web'
 include ':adapters:persistence'
 include ':adapters:messaging'
 include ':adapters:streams'
@@ -9,6 +10,7 @@ include ':configuration'
 
 findProject(':common')?.name = 'common'
 findProject(':application')?.name = 'application'
+findProject(':adapters:web')?.name = 'web'
 findProject(':adapters:persistence')?.name = 'persistence'
 findProject(':adapters:messaging')?.name = 'messaging'
 findProject(':adapters:streams')?.name = 'streams'
