--- a/app/backend/lead-service/configuration/build.gradle
+++ b/app/backend/lead-service/configuration/build.gradle
@@ -3,15 +3,21 @@ apply plugin: 'org.springframework.boot'
 dependencies {
     implementation project(':common')
     implementation project(':application')
+    implementation project(':adapters:web')
+    implementation project(':adapters:persistence')
     implementation project(':adapters:messaging')
+    implementation project(':adapters:streams')
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     testImplementation project(':application').sourceSets.test.output
+    testImplementation project(':adapters:web').sourceSets.test.output
+    testImplementation project(':adapters:persistence').sourceSets.test.output
     testImplementation project(':adapters:messaging').sourceSets.test.output
+    testImplementation project(':adapters:streams').sourceSets.test.output
 }
 
-bootJar{
+bootJar {
     destinationDirectory = file(rootProject.buildDir)
     archiveFileName = rootProject.name + ".jar"
 }
