--- a/app/backend/product-service/configuration/build.gradle
+++ b/app/backend/product-service/configuration/build.gradle
@@ -1,6 +1,4 @@
-plugins {
-    id "org.springframework.boot" version "2.7.13"
-}
+apply plugin: 'org.springframework.boot'
 
 dependencies {
     implementation project(':common')
@@ -13,5 +11,10 @@ dependencies {
     testImplementation project(':application').sourceSets.test.output
     testImplementation project(':adapters:persistence').sourceSets.test.output
     testImplementation project(':adapters:web').sourceSets.test.output
+}
+
+bootJar {
+    destinationDirectory = file(rootProject.buildDir)
+    archiveFileName = rootProject.name + ".jar"
 }
 
