--- a/app/backend/lead-service/build.gradle
+++ b/app/backend/lead-service/build.gradle
@@ -51,6 +51,8 @@ subprojects {
 		set('testcontainersVersion', "1.17.3")
 		set('testcontainersRedisVersion', "1.6.4")
 		set('awaitilityVersion', "4.2.0")
+		set('awsSdkVersion', "1.12.528")
+		set('dynamoDbLocalVersion', "1.15.0")
 	}
 
 	dependencies {
