--- a/app/backend/notification-service/settings.gradle
+++ b/app/backend/notification-service/settings.gradle
@@ -1,1 +1,12 @@
 rootProject.name = 'notification-service'
+
+include ':common'
+include ':application'
+include ':adapters:messaging'
+include ':configuration'
+
+findProject(':common')?.name = 'common'
+findProject(':application')?.name = 'application'
+findProject(':adapters:messaging')?.name = 'messaging'
+findProject(':configuration')?.name = 'configuration'
+
