--- a/app/backend/bff-service/settings.gradle
+++ b/app/backend/bff-service/settings.gradle
@@ -3,12 +3,12 @@ rootProject.name = 'bff-service'
 include ':common'
 include ':application'
 include ':adapters:web'
-include ':adapters:messaging'
+include ':adapters:streams'
 include ':configuration'
 
 findProject(':common')?.name = 'common'
 findProject(':application')?.name = 'application'
 findProject(':adapters:web')?.name = 'web'
-findProject(':adapters:messaging')?.name = 'messaging'
+findProject(':adapters:streams')?.name = 'streams'
 findProject(':configuration')?.name = 'configuration'
 
