--- a/app/backend/lead-service/adapters/streams/build.gradle
+++ b/app/backend/lead-service/adapters/streams/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation group: 'org.apache.commons', name: 'commons-pool2', version: apacheCommonPoolVersion
 
     implementation project(':common')
     implementation project(':application')
