--- a/app/backend/lead-service/build.gradle
+++ b/app/backend/lead-service/build.gradle
@@ -48,11 +48,12 @@ subprojects {
 		set('logstashVersion', "7.4")
 		set('assertJVersion', "3.24.2")
 		set('mockitoVersion', "5.4.0")
-		set('testcontainersVersion', "1.17.3")
-		set('testcontainersRedisVersion', "1.6.4")
 		set('awaitilityVersion', "4.2.0")
 		set('awsSdkVersion', "1.12.528")
 		set('dynamoDbLocalVersion', "1.15.0")
+		set('apacheCommonPoolVersion', "2.11.1")
+		set('testcontainersVersion', "1.17.3")
+		set('testcontainersRedisVersion', "1.6.4")
 	}
 
 	dependencies {
