--- a/app/infra/docker-compose.yaml
+++ b/app/infra/docker-compose.yaml
@@ -83,7 +83,7 @@ services:
       - "9411:9411"
 
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:5.4.0
     hostname: zookeeper
     container_name: zookeeper
     ports:
@@ -93,7 +93,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
 
   broker:
-    image: confluentinc/cp-server:latest
+    image: confluentinc/cp-server:5.4.0
     hostname: broker
     container_name: broker
     depends_on:
@@ -116,15 +116,14 @@ services:
       CONFLUENT_SUPPORT_CUSTOMER_ID: "anonymous"
 
   kafka-tools:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:5.4.0
     hostname: kafka-tools
     container_name: kafka-tools
     command: ["tail", "-f", "/dev/null"]
     network_mode: "host"
 
   schema-registry:
-    image: confluentinc/cp-schema-registry:latest
-    hostname: schema-registry
+    image: confluentinc/cp-schema-registry:5.4.0
     container_name: schema-registry
     depends_on:
       - zookeeper
@@ -132,7 +131,7 @@ services:
     ports:
       - "8081:8081"
     environment:
-      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_HOST_NAME: localhost
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: "zookeeper:2181"
 
   control-center:
@@ -148,7 +147,7 @@ services:
     environment:
       CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
       CONTROL_CENTER_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+      CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://localhost:8081"
       CONTROL_CENTER_REPLICATION_FACTOR: 1
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
