--- a/app/backend/lead-service/configuration/src/main/resources/application.yml
+++ b/app/backend/lead-service/configuration/src/main/resources/application.yml
@@ -63,10 +63,30 @@ topic:
 
 org:
   jobrunr:
+    database:
+      skip-create: false
+      table-prefix: _jobrunr # allows to set a table prefix (e.g. schema  or schema and tableprefix for all tables. e.g. MYSCHEMA._jobrunr)
+      database-name: jobrunr # Override the default database name to use (e.g. use main application database)
+      datasource:  # allows to specify a DataSource specifically for JobRunr
+      type: redis-lettuce  # if you have multiple supported storage providers available in your application (e.g. an SQL DataSource and Elasticsearch), it allows to specify which database to choose. Valid values are 'sql', 'mongodb', 'redis-lettuce', 'redis-jedis' and 'elasticsearch'.
+    jobs:
+      default-number-of-retries: 3 #the default number of retries for a failing job
+      retry-back-off-time-seed: 5 #the default time seed for the exponential back-off policy.
+    job-scheduler:
+      enabled: true
     background-job-server:
       enabled: true
+      worker-count: 1 #this value normally is defined by the amount of CPU's that are available
+      poll-interval-in-seconds: 15 #check for new work every 15 seconds
+      delete-succeeded-jobs-after: 36 #succeeded jobs will go to the deleted state after 36 hours
+      permanently-delete-deleted-jobs-after: 72 #deleted jobs will be deleted permanently after 72 hours
+      metrics:
+        enabled: true #Micrometer integration - this was true in v5.
     dashboard:
       enabled: true
+      port: 9000 #the port on which to start the dashboard
+    miscellaneous:
+      allow-anonymous-data-usage: false #this sends the amount of succeeded jobs for marketing purposes
 
 management:
   endpoint:
