--- a/app/backend/notification-service/adapters/email/build.gradle
+++ b/app/backend/notification-service/adapters/email/build.gradle
@@ -1,19 +1,10 @@
-plugins {
-    id 'java'
-}
-
-group = 'org.example'
-version = 'unspecified'
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws-ses'
+
+    implementation project(':common')
+    implementation project(':application')
+
+    testImplementation project(':application').sourceSets.test.output
 }
 
-test {
-    useJUnitPlatform()
-}
