--- a/app/backend/notification-service/build.gradle
+++ b/app/backend/notification-service/build.gradle
@@ -43,6 +43,7 @@ subprojects {
 	ext {
 		set('springBootVersion', "2.7.13")
 		set('springCloudVersion', "2021.0.7")
+		set('springCloudAwsVersion', "2.4.4")
 		set('avroVersion', "1.11.2")
 		set('confluentVersion', "7.4.0")
 		set('logstashVersion', "7.4")
@@ -86,6 +87,7 @@ subprojects {
 		imports {
 			mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
 			mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+			mavenBom("io.awspring.cloud:spring-cloud-aws-dependencies:${springCloudAwsVersion}")
 			mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
 		}
 	}
