--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -1,8 +1,5 @@
-server:
-  port: ${PORT:8080}
-
 spring:
   datasource:
-    url: ${JDBC_DATABASE_URL:}
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
