--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -3,3 +3,9 @@ spring:
     url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
     username: ${PGUSER}
     password: ${PGPASSWORD}
+
+eureka:
+  client:
+    enabled: true
+    register-with-eureka: true
+    service-url: prospect-leads-system-production-c7cc.up.railway.app/eureka
