--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -8,4 +8,5 @@ eureka:
   client:
     enabled: true
     register-with-eureka: true
-    service-url: prospect-leads-system-production-c7cc.up.railway.app/eureka
+    service-url:
+      default-zone: prospect-leads-system-production-c7cc.up.railway.app/eureka
