Fix eureka server

--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -9,4 +9,4 @@ eureka:
     enabled: true
     register-with-eureka: true
     service-url:
-      default-zone: service-discovery.up.railway.app/eureka
+      default-zone: service-discovery.up.railway.app
