Fix eureka server

--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -8,5 +8,4 @@ eureka:
   client:
     enabled: true
     register-with-eureka: true
-    service-url:
-      default-zone: service-discovery.up.railway.app
+    eureka-server-d-n-s-name: service-discovery.up.railway.app
