Add spring boot admin client url

--- a/app/backend/product-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/product-service/configuration/src/main/resources/application-prod.yml
@@ -3,6 +3,11 @@ spring:
     url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
     username: ${PGUSER}
     password: ${PGPASSWORD}
+  boot:
+    admin:
+      client:
+        url: https://service-discovery.up.railway.app/admin
+
 
 eureka:
   client:
