--- a/app/backend/product-service/build.gradle
+++ b/app/backend/product-service/build.gradle
@@ -42,6 +42,7 @@ subprojects {
 		set('springBootVersion', "2.7.13")
 		set('springCloudVersion', "2021.0.7")
 		set('springDataCommonsVersion', "2.7.16")
+		set('springAdminVersion', "2.7.11")
 		set('logstashVersion', "7.4")
 		set('assertJVersion', "3.24.2")
 		set('mockitoVersion', "5.4.0")
@@ -53,7 +54,7 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-actuator'
 		implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
 		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-		implementation 'de.codecentric:spring-boot-admin-starter-client'
+		implementation "de.codecentric:spring-boot-admin-starter-client:${springAdminVersion}"
 		implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 		implementation group: 'org.springframework.data', name: 'spring-data-commons', version: springDataCommonsVersion
