--- a/app/backend/service-discovery/build.gradle
+++ b/app/backend/service-discovery/build.gradle
@@ -24,13 +24,14 @@ repositories {
 ext {
 	set('springBootAdminVersion', "2.7.4")
 	set('springCloudVersion', "2021.0.7")
+	set('springAdminVersion', "2.7.11")
 	set('logstashVersion', "7.4")
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'de.codecentric:spring-boot-admin-starter-server'
+	implementation "de.codecentric:spring-boot-admin-starter-server:${springAdminVersion}"
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	compileOnly 'org.projectlombok:lombok'
